Wire JavaFX client to REST API
Co-authored-by: rp2w9ghyk4 <rp2w9ghyk4@privaterelay.appleid.com>